Fix header spacing issue

--- a/style.css
+++ b/style.css
@@ -241,21 +241,27 @@ label.input-present {
     color: transparent;
 }
 
-@media (max-width: 797px) {
+@media (max-width: 789px) {
+
     #add-book {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 30px 5px;
-        font-size: 14px;
+        min-width: 110px;
+        margin-left: 15px;
     }
 
     #add-book span {
-        margin-bottom: 3px;
-        font-weight: 600;
-        font-size: 16px;
+        font-size: 12px;
+    }
+
+    #header h1 {
+        font-size: 20px;
+        margin-right: 15px;
+    }
+
+    #header {
+        justify-content: center;
     }
 }
+
+
 
 
